fix the alignment of title and subtitle in teams page

--- a/client/src/pages/TeamPage/TeamPage.css
+++ b/client/src/pages/TeamPage/TeamPage.css
@@ -24,10 +24,12 @@
     margin-top: 4rem;
     margin-bottom: 0.75rem;
     font-size: 45px;
+    text-align: left;
 }
 
 .TeamImage .sub-title {
   font-size: 30px;
+  text-align: left;
 }
 
 
@@ -146,6 +148,16 @@
     font-size: 28px;
   }
 
+}
+
+@media screen and (max-width: 992px) {
+  .TeamPage .title {
+    text-align: center;
+  }
+
+  .TeamImage .sub-title {
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 650px) and (max-width: 992px) {
